--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,5 @@
-#container > div {
-    outline: 1px solid black;
-}
-
 #container {
-    height: 90vh;
+    height: 80vh;
     display: grid;
     grid-template: 1fr 4fr / 1fr 3fr 1fr;
 }
@@ -13,28 +9,40 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     gap: 50px;
+    padding: 20px;
+    margin-bottom: 2px;
+    box-shadow: 0px 1px 5px rgb(120, 120, 120);
 }
 
 #dashboard {
     grid-area: 1 / 1 / 3 / 2;
     display: grid;
     grid-template-rows: 100px 1fr 2fr;
+    background: rgb(80, 166, 232);
+    gap: 40px;
 }
 
 #content {
     grid-area: 2 / 2 / 3 / 3;
     display: grid;
+    align-items: center;
+    justify-content: center;
     grid-template-rows: 30px 1fr;
+    background: rgb(226, 236, 242);
 }
 
 .cards {
     display: grid;
     grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    gap: 40px;
 }
 
 #sidebar {
     grid-area: 2 / 3 / 3 / 4;
     display: grid;
+    background: rgb(226, 236, 242);
+    align-items: center;
+    justify-content: center;
     grid-template-rows: 1fr 1fr;
 }
 
@@ -58,11 +66,58 @@ p {
 .card{
     height: 200px;
     width: 300px;
-    border: 1px solid black;
+    border-radius: 6px;
+    border-left: 8px solid orange;
+    background: white;
+    padding: 10px;
+    box-shadow: 0px 2px 5px rgb(177, 177, 177);
 }
 
 .sidebard-card {
     height: 300px;
-    width: 200px;
-    border: 1px solid black;
+    width: 215px;
+    border-radius: 6px;
+    background: white;
+    padding: 10px;
+    box-shadow: 0px 2px 5px rgb(177, 177, 177);
+}
+
+.db-1 {
+    display: grid;
+    color: white;
+    font-weight: 800;
+    font-size: 24px;
+    margin: 40px;
+}
+
+.db-2, .db-3 {
+    display: grid;
+    font-size: 18px;
+    color: white;
+    font-weight: 800;
+    margin-left: 40px;
+}
+
+.db-2 {
+    grid-template-rows: repeat(6, 50px);
+}
+
+.db-3 {
+    grid-template-rows: repeat(3, 50px);
+}
+
+button {
+    border: none;
+    background:  rgb(80, 166, 232);
+    border-radius: 20px;
+    height: 40px;
+    color: white;
+    font-weight: 800;
+}
+
+#search {
+    height: 25px;
+    border: none;
+    border-radius: 16px;
+    background: rgb(226, 236, 242);
 }
